# docker-immich

./: .gitattributes  .gitignore  MIGRATION.md  README.md  build-libjxl.sh.patch  pyproject.toml  render_templates.py
.github/: dependabot.yml
.github/workflows/: docker-cleanup.yml  docker.yml  external-trigger.yml  permissions.yml  test.yml
patches/: backup_missing_postgres_port.json  backup_missing_postgres_port.patch  posix_postinstall_sh_script.json  posix_postinstall_sh_script.patch
render_templates/: main.py  patches.py  test_main.py
root/: donate.txt
root/etc/s6-overlay/s6-rc.d/ci-service-check/: up
root/etc/s6-overlay/s6-rc.d/init-adduser/: run
root/etc/s6-overlay/s6-rc.d/init-check-variables/: run
root/etc/s6-overlay/s6-rc.d/svc-machine-learning/: run
root/etc/s6-overlay/s6-rc.d/svc-microservices/: run
root/etc/s6-overlay/s6-rc.d/svc-server/: run
templates/: Dockerfile.j2  run.j2
templates/init-config-immich/: run.j2
templates/svc-machine-learning/: run.j2
