[tool.poetry]
name = "docker-immich"
version = "0.1.1"
description = "AIO image for Immich"
authors = ["martabal <74269598+martabal@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "render_templates"}]

[tool.ruff]
cache-dir = "~/.cache/ruff"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
