[project]
name = "docker-immich"
version = "0.1.1"
description = "AIO image for Immich"
authors = [{name = "martabal",email = "<74269598+martabal@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4"
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

