[project]
name = "docker-immich"
version = "0.1.1"
description = "AIO image for Immich"
authors = [{name = "martabal",email = "<74269598+martabal@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4"
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
